[BillSplitter] Increased size of segment button col, fixed button text alignment

--- a/src/app/home/widgets/bill-splitter/bill-splitter.component.scss
+++ b/src/app/home/widgets/bill-splitter/bill-splitter.component.scss
@@ -3,11 +3,3 @@ ion-card-content {
   padding-inline-start: 5px !important;
   padding-inline-end: 5px !important;
 }
-
-.pad-left {
-  padding-left: 15px;
-}
-
-.pad-right {
-  padding-right: 15px;
-}
